tests/type_errors/tuple_in_if_condition.nos
# expect_error: Bool
# Tuples should not be usable as Bool conditions
main() = if (1, 2) then "yes" else "no"
